--- a/src/main/resources/hr/algebra/javatwo/hello-view.fxml
+++ b/src/main/resources/hr/algebra/javatwo/hello-view.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -15,10 +17,17 @@
 <?import javafx.scene.text.Font?>
 
 <VBox alignment="CENTER" prefHeight="800.0" prefWidth="800.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hr.algebra.javatwo.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
+
    <children>
+      <MenuBar prefHeight="25.0" prefWidth="786.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="Game">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#initialize" text="New game" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
       <AnchorPane prefHeight="771.0" prefWidth="760.0">
          <children>
             <Button fx:id="stepButton" layoutX="24.0" layoutY="35.0" mnemonicParsing="false" onAction="#onStepButtonClick" prefHeight="80.0" prefWidth="80.0" text="START">
@@ -57,18 +66,18 @@
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <Label fx:id="redLivesLabel" layoutX="131.0" layoutY="656.0" text="5">
+            <Label fx:id="redLivesLabel" layoutX="131.0" layoutY="656.0" text="2">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <Label fx:id="blueLivesLabel" layoutX="130.0" layoutY="688.0" text="5">
+            <Label fx:id="blueLivesLabel" layoutX="130.0" layoutY="688.0" text="2">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
             <Pane fx:id="clankPane" layoutX="95.0" layoutY="576.0" prefHeight="21.0" prefWidth="636.0" style="-fx-background-color: #8B4513;" />
-            <Label layoutX="237.0" layoutY="14.0" text="svaki veci od 4 zmaj se mice">
+            <Label layoutX="237.0" layoutY="65.0" text="svaki veci od 4 zmaj se mice">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
@@ -145,6 +154,16 @@
             <Line layoutX="739.0" layoutY="510.0" rotate="90.0" startY="20.0" />
             <Line endX="-0.5" endY="-0.5" layoutX="221.0" layoutY="126.0" startX="-11.0" startY="15.0" />
             <Line endX="-32.0" endY="-8.0" layoutX="231.0" layoutY="136.0" startX="-21.0" startY="5.0" />
+            <Label fx:id="timerLabel" layoutX="31.0" layoutY="141.0" prefHeight="27.0" prefWidth="66.0" text="02:00">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <ImageView fx:id="goldImage" fitHeight="75.0" fitWidth="200.0" layoutX="30.0" layoutY="392.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../gold.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
