--- a/src/main/resources/hr/algebra/javatwo/hello-view.fxml
+++ b/src/main/resources/hr/algebra/javatwo/hello-view.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="800.0" prefWidth="800.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hr.algebra.javatwo.HelloController">
+<VBox alignment="CENTER" prefHeight="800.0" prefWidth="800.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hr.algebra.javatwo.controller.HelloController">
 
    <children>
       <MenuBar prefHeight="25.0" prefWidth="786.0">
@@ -24,6 +24,8 @@
           <Menu mnemonicParsing="false" text="Game">
             <items>
               <MenuItem mnemonicParsing="false" onAction="#initialize" text="New game" />
+                  <MenuItem mnemonicParsing="false" onAction="#saveGame" text="Save game" />
+                  <MenuItem mnemonicParsing="false" onAction="#loadGame" text="Load game" />
             </items>
           </Menu>
         </menus>
@@ -77,11 +79,6 @@
                </font>
             </Label>
             <Pane fx:id="clankPane" layoutX="95.0" layoutY="576.0" prefHeight="21.0" prefWidth="636.0" style="-fx-background-color: #8B4513;" />
-            <Label layoutX="237.0" layoutY="65.0" text="svaki veci od 4 zmaj se mice">
-               <font>
-                  <Font name="System Bold" size="15.0" />
-               </font>
-            </Label>
             <Label layoutX="42.0" layoutY="576.0" prefHeight="21.0" text="Clank:">
                <font>
                   <Font name="System Bold" size="15.0" />
@@ -129,11 +126,6 @@
                   <Image url="@../../../dragon.png" />
                </image>
             </ImageView>
-            <Label layoutX="237.0" layoutY="44.0" text="koliko dobije pola zaokruyeno na vise mora dat u clank">
-               <font>
-                  <Font name="System Bold" size="15.0" />
-               </font>
-            </Label>
             <Pane fx:id="bagPane" layoutX="94.0" layoutY="602.0" prefHeight="21.0" prefWidth="636.0" style="-fx-background-color: #C4A484;" />
             <Label layoutX="44.0" layoutY="602.0" prefHeight="21.0" text="Bag:">
                <font>
@@ -154,16 +146,34 @@
             <Line layoutX="739.0" layoutY="510.0" rotate="90.0" startY="20.0" />
             <Line endX="-0.5" endY="-0.5" layoutX="221.0" layoutY="126.0" startX="-11.0" startY="15.0" />
             <Line endX="-32.0" endY="-8.0" layoutX="231.0" layoutY="136.0" startX="-21.0" startY="5.0" />
-            <Label fx:id="timerLabel" layoutX="31.0" layoutY="141.0" prefHeight="27.0" prefWidth="66.0" text="02:00">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
             <ImageView fx:id="goldImage" fitHeight="75.0" fitWidth="200.0" layoutX="30.0" layoutY="392.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../gold.png" />
                </image>
             </ImageView>
+            <Label layoutX="329.0" layoutY="14.0" text="Playing now:">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="playerLabel" layoutX="429.0" layoutY="15.0" style="-fx-text-fill: red;" text="Red" textFill="RED">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="timerLabel" layoutX="430.0" layoutY="39.0" prefHeight="27.0" prefWidth="66.0" text="02:00">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="300.0" layoutY="42.0" text="Gold coming for:">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="616.0" layoutY="67.0" text="Label" />
+            <Button layoutX="27.0" layoutY="129.0" mnemonicParsing="false" fx:id="useButton" onAction="#onUseButtonClick" prefHeight="25.0" prefWidth="80.0" text="Use" />
+            <Button layoutX="27.0" layoutY="166.0" mnemonicParsing="false" fx:id="skipButton" onAction="#onSkipButtonClick" prefHeight="25.0" prefWidth="80.0" text="Skip" />
          </children>
       </AnchorPane>
    </children>
