--- a/src/main/resources/hr/algebra/javatwo/game-view.fxml
+++ b/src/main/resources/hr/algebra/javatwo/game-view.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -16,7 +18,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="800.0" prefWidth="800.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hr.algebra.javatwo.controller.GameController">
+<VBox alignment="CENTER" prefHeight="800.0" prefWidth="1050.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hr.algebra.javatwo.controller.GameController">
 
    <children>
       <MenuBar prefHeight="25.0" prefWidth="786.0">
@@ -183,6 +185,9 @@
                   <Font size="33.0" />
                </font>
             </Button>
+            <TextArea fx:id="chatMessagesTextArea" layoutX="769.0" layoutY="1.0" prefHeight="578.0" prefWidth="281.0" />
+            <TextField fx:id="chatMessageTextField" layoutX="769.0" layoutY="583.0" prefHeight="25.0" prefWidth="281.0" />
+            <Button layoutX="769.0" layoutY="611.0" mnemonicParsing="false" onAction="#sendMessage" prefHeight="25.0" prefWidth="281.0" text="Send" />
          </children>
       </AnchorPane>
    </children>
