--- a/src/main/resources/hr/algebra/javatwo/game-view.fxml
+++ b/src/main/resources/hr/algebra/javatwo/game-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -17,6 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.TextFlow?>
 
 <VBox alignment="CENTER" prefHeight="800.0" prefWidth="1050.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hr.algebra.javatwo.controller.GameController">
 
@@ -185,9 +186,17 @@
                   <Font size="33.0" />
                </font>
             </Button>
-            <TextArea fx:id="chatMessagesTextArea" layoutX="769.0" layoutY="1.0" prefHeight="578.0" prefWidth="281.0" />
             <TextField fx:id="chatMessageTextField" layoutX="769.0" layoutY="583.0" prefHeight="25.0" prefWidth="281.0" />
-            <Button layoutX="769.0" layoutY="611.0" mnemonicParsing="false" onAction="#sendMessage" prefHeight="25.0" prefWidth="281.0" text="Send" />
+            <Button layoutX="769.0" layoutY="611.0" mnemonicParsing="false" onAction="#onSendButtonClick" prefHeight="25.0" prefWidth="281.0" text="Send" />
+            <ScrollPane layoutX="769.0" layoutY="6.0" prefHeight="569.0" prefWidth="281.0">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <TextFlow fx:id="chatMessagesTextFlow" prefHeight="559.0" prefWidth="266.0" style="-fx-border-color: black;" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </ScrollPane>
          </children>
       </AnchorPane>
    </children>
