--- a/src/main/resources/hr/algebra/javatwo/game-view.fxml
+++ b/src/main/resources/hr/algebra/javatwo/game-view.fxml
@@ -92,7 +92,7 @@
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <GridPane fx:id="dragonStepGridPane" alignment="CENTER" gridLinesVisible="true" layoutX="471.0" layoutY="662.0" prefHeight="54.0" prefWidth="266.0">
+            <GridPane fx:id="dragonStepGridPane" alignment="CENTER" gridLinesVisible="true" layoutX="468.0" layoutY="640.0" prefHeight="54.0" prefWidth="266.0">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -159,22 +159,22 @@
                   <Image url="@../../../gold.png" />
                </image>
             </ImageView>
-            <Label layoutX="329.0" layoutY="14.0" text="Playing now:">
+            <Label layoutX="358.0" layoutY="49.0" text="Playing now:">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <Label fx:id="playerLabel" layoutX="429.0" layoutY="15.0" style="-fx-text-fill: red;" text="Red" textFill="RED">
+            <Label fx:id="nextPlayerLabel" layoutX="458.0" layoutY="50.0" style="-fx-text-fill: red;" text="Red" textFill="RED">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <Label fx:id="timerLabel" layoutX="430.0" layoutY="39.0" prefHeight="27.0" prefWidth="66.0" text="02:00">
+            <Label fx:id="timerLabel" layoutX="459.0" layoutY="74.0" prefHeight="27.0" prefWidth="66.0" text="02:00">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label layoutX="300.0" layoutY="42.0" text="Gold coming for:">
+            <Label layoutX="329.0" layoutY="77.0" text="Gold coming for:">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
@@ -187,7 +187,7 @@
                </font>
             </Button>
             <TextField fx:id="chatMessageTextField" layoutX="769.0" layoutY="583.0" prefHeight="25.0" prefWidth="281.0" />
-            <Button layoutX="769.0" layoutY="611.0" mnemonicParsing="false" onAction="#onSendButtonClick" prefHeight="25.0" prefWidth="281.0" text="Send" />
+            <Button fx:id="sendButton" layoutX="769.0" layoutY="611.0" mnemonicParsing="false" onAction="#onSendButtonClick" prefHeight="25.0" prefWidth="281.0" text="Send" />
             <ScrollPane layoutX="769.0" layoutY="6.0" prefHeight="569.0" prefWidth="281.0">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0">
@@ -197,6 +197,11 @@
                   </AnchorPane>
               </content>
             </ScrollPane>
+            <Label fx:id="lastMoveLabel" layoutY="716.0" prefHeight="36.0" prefWidth="1051.0" style="-fx-background-color: #000;" text="LastMove:" textFill="WHITE">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
